Update to use the new docuscope-tag/task image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - couchdb
       - dictionary
   celery:
-    image: registry.gitlab.com/cmu_sidecar/docuscope-tag:master-task
+    image: registry.gitlab.com/cmu_sidecar/docuscope-tag/task:master
     depends_on:
       - rabbitmq
       - couchdb
