--- a/classroom/package.json
+++ b/classroom/package.json
@@ -33,8 +33,11 @@
     "@angular/router": "^6.1.10",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
+    "jquery": "^3.3.1",
+    "ng-easyui": "^1.2.0",
     "ngx-spinner": "^6.1.2",
     "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
