--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,9 @@ stages:
   - release
 
 variables:
+  DOCKER_DRIVER: overlay2
   REF_CONTAINER: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}
+  RELEASE_CONTAINER:  ${CI_REGISTRY_IMAGE}:latest
 
 before_script:
   - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
@@ -19,3 +21,12 @@ build:
   script:
     - docker build -t "${REF_CONTAINER}" .
     - docker push "${REF_CONTAINER}"
+
+release:
+  stage: release
+  script:
+    - docker pull "${REF_CONTAINER}"
+    - docker tag "${REF_CONTAINER}" "${RELEASE_CONTAINER}"
+    - docker push "${RELEASE_CONTAINER}"
+  only:
+    - master
