Changes base href for classroom on production build. Uses /docuscope/ for backend. Still need to better parameterize this stuff.

--- a/classroom/package.json
+++ b/classroom/package.json
@@ -16,7 +16,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build_prod": "ng build --prod",
+    "build_prod": "ng build --prod --base-href=/docuscope/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
