--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,27 @@
 -i https://pypi.org/simple
-aniso8601==4.0.1
-beautifulsoup4==4.6.3
+aniso8601==4.1.0
+beautifulsoup4==4.7.1
 certifi==2018.11.29
 chardet==3.0.4
 click==7.0
-flask-restful==0.3.6
+flask-restful==0.3.7
 flask-sqlalchemy==2.3.2
 flask==1.0.2
 idna==2.8
 itsdangerous==1.1.0
 jinja2==2.10
 markupsafe==1.1.0
-marshmallow==2.16.3
+marshmallow==2.18.0
 mysqlclient==1.3.14
-numpy==1.15.4
+numpy==1.16.0
 pandas==0.23.4
-pillow==5.3.0
+pillow==5.4.1
 python-dateutil==2.7.5
-pytz==2018.7
+pytz==2018.9
 reportlab==3.5.12
 requests==2.21.0
 six==1.12.0
-sqlalchemy==1.2.15
+soupsieve==1.7.1
+sqlalchemy==1.2.16
 urllib3==1.24.1
 werkzeug==0.14.1
