--- a/classroom/package.json
+++ b/classroom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docuscope-classroom",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "description": "Visualization of DocuScope analytics of a set of documents.",
   "repository": {
     "type": "git",
@@ -23,44 +23,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
-    "core-js": "^2.5.4",
+    "@angular/animations": "^7.2.0",
+    "@angular/common": "^7.2.0",
+    "@angular/compiler": "^7.2.0",
+    "@angular/core": "^7.2.0",
+    "@angular/forms": "^7.2.0",
+    "@angular/http": "^7.2.0",
+    "@angular/platform-browser": "^7.2.0",
+    "@angular/platform-browser-dynamic": "^7.2.0",
+    "@angular/router": "^7.2.0",
+    "core-js": "^2.6.2",
     "d3": "^5.7.0",
     "jquery": "^3.3.1",
-    "ng-easyui": "^1.2.0",
+    "ng-easyui": "^1.2.4",
     "ngx-spinner": "^6.1.2",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
-    "zone.js": "~0.8.26"
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.27"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.5",
-    "@angular/cli": "^6.2.5",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
-    "@types/d3": "^5.0.0",
-    "@types/jasmine": "^2.8.9",
-    "@types/jasminewd2": "^2.0.5",
-    "@types/node": "^10.11.7",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "^7.2.1",
+    "@angular/compiler-cli": "^7.2.0",
+    "@angular/language-service": "^7.2.0",
+    "@types/d3": "^5.7.0",
+    "@types/jasmine": "^3.3.5",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^10.12.18",
     "codelyzer": "^4.5.0",
-    "jasmine-core": "^3.2.1",
+    "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "protractor": "~5.4.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.2",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "^2.9.2"
+    "tslint": "~5.12.1",
+    "typescript": "^3.2.2"
   }
 }
