Code cleanup and move to using sqlalchemy directly instead of flask-sqlalchemy This is done in preparation for potentially moving away from flask.

--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,9 @@ reportlab = "*"
 pandas = "*"
 marshmallow = "*"
 "beautifulsoup4" = "*"
-flask-sqlalchemy = "*"
 requests = "*"
 mysqlclient = "*"
+sqlalchemy = "*"
 
 [dev-packages]
 pylint = "*"
