--- a/classroom/package.json
+++ b/classroom/package.json
@@ -23,45 +23,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.0",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/forms": "^7.2.0",
-    "@angular/http": "^7.2.0",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
-    "core-js": "^2.6.2",
-    "d3": "^5.7.0",
+    "@angular/animations": "^7.2.7",
+    "@angular/common": "^7.2.7",
+    "@angular/compiler": "^7.2.7",
+    "@angular/core": "^7.2.7",
+    "@angular/forms": "^7.2.7",
+    "@angular/http": "^7.2.7",
+    "@angular/platform-browser": "^7.2.7",
+    "@angular/platform-browser-dynamic": "^7.2.7",
+    "@angular/router": "^7.2.7",
+    "core-js": "^2.6.5",
+    "d3": "^5.9.1",
     "jquery": "^3.3.1",
-    "ng-easyui": "^1.2.4",
-    "ngx-spinner": "^6.1.2",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
+    "ng-easyui": "^1.2.6",
+    "ngx-spinner": "^7.0.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.27"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "^7.2.1",
-    "@angular/compiler-cli": "^7.2.0",
-    "@angular/language-service": "^7.2.0",
-    "@types/d3": "^5.7.0",
-    "@types/jasmine": "^3.3.5",
+    "@angular-devkit/build-angular": "^0.13.4",
+    "@angular/cli": "^7.3.4",
+    "@angular/compiler-cli": "^7.2.7",
+    "@angular/language-service": "^7.2.7",
+    "@types/d3": "^5.7.1",
+    "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.18",
+    "@types/node": "^11.9.6",
     "codelyzer": "^4.5.0",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.2",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.12.1",
-    "typescript": "^3.2.2"
+    "ts-node": "^8.0.2",
+    "tslint": "^5.13.1",
+    "typescript": "^3.2.4"
   }
 }
