Updates to various modules.

--- a/classroom/package.json
+++ b/classroom/package.json
@@ -15,42 +15,44 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "build_prod": "ng build --prod --base-href=/docuscope/",
+    "build": "ng build --aot --prod --output-hashing none",
+    "build_prod": "ng build --aot --prod --base-href=/docuscope/ --output-hashing none",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.7",
-    "@angular/common": "^7.2.7",
-    "@angular/compiler": "^7.2.7",
-    "@angular/core": "^7.2.7",
-    "@angular/forms": "^7.2.7",
-    "@angular/http": "^7.2.7",
-    "@angular/platform-browser": "^7.2.7",
-    "@angular/platform-browser-dynamic": "^7.2.7",
-    "@angular/router": "^7.2.7",
+    "@angular/animations": "^7.2.10",
+    "@angular/common": "^7.2.10",
+    "@angular/compiler": "^7.2.10",
+    "@angular/core": "^7.2.10",
+    "@angular/forms": "^7.2.10",
+    "@angular/http": "^7.2.10",
+    "@angular/platform-browser": "^7.2.10",
+    "@angular/platform-browser-dynamic": "^7.2.10",
+    "@angular/router": "^7.2.10",
     "core-js": "^2.6.5",
-    "d3": "^5.9.1",
+    "d3": "^5.9.2",
     "jquery": "^3.3.1",
     "ng-easyui": "^1.2.6",
     "ngx-spinner": "^7.0.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
+    "rxjs-tslint": "^0.1.7",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.4",
-    "@angular/cli": "^7.3.4",
-    "@angular/compiler-cli": "^7.2.7",
-    "@angular/language-service": "^7.2.7",
+    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular/cli": "^7.3.6",
+    "@angular/compiler-cli": "^7.2.10",
+    "@angular/language-service": "^7.2.10",
     "@types/d3": "^5.7.1",
-    "@types/jasmine": "^3.3.9",
+    "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^11.9.6",
+    "@types/node": "^11.11.4",
+    "ajv-keywords": "^3.4.0",
     "codelyzer": "^4.5.0",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -60,8 +62,8 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.2",
-    "ts-node": "^8.0.2",
-    "tslint": "^5.13.1",
-    "typescript": "^3.2.4"
+    "ts-node": "^8.0.3",
+    "tslint": "^5.14.0",
+    "typescript": "3.2.4"
   }
 }
