Fixes lint script to clobber before_script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,10 +20,13 @@ before_script:
 lint:
   stage: check
   image: node:latest
+  before_script:
+    - npm --version
   script:
     - cd classroom
     - npm install
     - npm lint
+
 build:
   stage: build
   script:
