--- a/classroom/package.json
+++ b/classroom/package.json
@@ -16,22 +16,24 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --aot --prod --output-hashing none",
+    "build_dev": "ng build --output-hashing none",
     "build_prod": "ng build --aot --prod --base-href=/docuscope/ --output-hashing none",
     "test": "ng test",
+    "test_headless": "ng test --watch=false --browsers=ChromeHeadless --code-coverage=true",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.10",
-    "@angular/common": "^7.2.10",
-    "@angular/compiler": "^7.2.10",
-    "@angular/core": "^7.2.10",
-    "@angular/forms": "^7.2.10",
-    "@angular/http": "^7.2.10",
-    "@angular/platform-browser": "^7.2.10",
-    "@angular/platform-browser-dynamic": "^7.2.10",
-    "@angular/router": "^7.2.10",
+    "@angular/animations": "^7.2.11",
+    "@angular/common": "^7.2.11",
+    "@angular/compiler": "^7.2.11",
+    "@angular/core": "^7.2.11",
+    "@angular/forms": "^7.2.11",
+    "@angular/http": "^7.2.11",
+    "@angular/platform-browser": "^7.2.11",
+    "@angular/platform-browser-dynamic": "^7.2.11",
+    "@angular/router": "^7.2.11",
     "core-js": "^2.6.5",
     "d3": "^5.9.2",
     "jquery": "^3.3.1",
@@ -46,12 +48,12 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.6",
     "@angular/cli": "^7.3.6",
-    "@angular/compiler-cli": "^7.2.10",
-    "@angular/language-service": "^7.2.10",
+    "@angular/compiler-cli": "^7.2.11",
+    "@angular/language-service": "^7.2.11",
     "@types/d3": "^5.7.1",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^11.11.4",
+    "@types/node": "^11.12.0",
     "ajv-keywords": "^3.4.0",
     "codelyzer": "^4.5.0",
     "jasmine-core": "^3.3.0",
