--- a/classroom/package.json
+++ b/classroom/package.json
@@ -25,47 +25,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.11",
-    "@angular/common": "^7.2.11",
-    "@angular/compiler": "^7.2.11",
-    "@angular/core": "^7.2.11",
-    "@angular/forms": "^7.2.11",
-    "@angular/http": "^7.2.11",
-    "@angular/platform-browser": "^7.2.11",
-    "@angular/platform-browser-dynamic": "^7.2.11",
-    "@angular/router": "^7.2.11",
-    "core-js": "^2.6.5",
+    "@angular/animations": "^7.2.14",
+    "@angular/cdk": "~7.3.7",
+    "@angular/common": "^7.2.14",
+    "@angular/compiler": "^7.2.14",
+    "@angular/core": "^7.2.14",
+    "@angular/forms": "^7.2.14",
+    "@angular/http": "^7.2.14",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.14",
+    "@angular/platform-browser-dynamic": "^7.2.14",
+    "@angular/router": "^7.2.14",
+    "core-js": "^3.0.1",
     "d3": "^5.9.2",
-    "jquery": "^3.3.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.0",
     "ng-easyui": "^1.2.6",
-    "ngx-spinner": "^7.0.0",
-    "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.4.0",
+    "ngx-spinner": "^7.1.4",
+    "rxjs": "^6.5.1",
+    "rxjs-compat": "^6.5.1",
     "rxjs-tslint": "^0.1.7",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.29"
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
-    "@angular/cli": "^7.3.6",
-    "@angular/compiler-cli": "^7.2.11",
-    "@angular/language-service": "^7.2.11",
-    "@types/d3": "^5.7.1",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
+    "@angular/language-service": "^7.2.14",
+    "@types/d3": "^5.7.2",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^11.12.0",
+    "@types/node": "^11.13.7",
     "ajv-keywords": "^3.4.0",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "^3.3.0",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "memoizee": "^0.4.14",
     "protractor": "~5.4.2",
-    "ts-node": "^8.0.3",
-    "tslint": "^5.14.0",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
     "typescript": "3.2.4"
   }
 }
