--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,30 @@
 -i https://pypi.org/simple
-aniso8601==4.1.0
+aniso8601==6.0.0
 beautifulsoup4==4.7.1
-certifi==2018.11.29
+certifi==2019.3.9
 chardet==3.0.4
 click==7.0
+fastapi==0.18.0
 flask-restful==0.3.7
 flask==1.0.2
 idna==2.8
 itsdangerous==1.1.0
-jinja2==2.10
-markupsafe==1.1.0
-marshmallow==2.18.0
-mysqlclient==1.4.2
-numpy==1.16.1
-pandas==0.24.1
-pillow==5.4.1
+jinja2==2.10.1
+markupsafe==1.1.1
+marshmallow==2.19.2
+mysqlclient==1.4.2.post1
+numpy==1.16.3
+pandas==0.24.2
+pillow==6.0.0
+pydantic==0.23
 python-dateutil==2.8.0
-pytz==2018.9
-reportlab==3.5.13
+pytz==2019.1
+reportlab==3.5.19
 requests==2.21.0
 six==1.12.0
-soupsieve==1.7.3
-sqlalchemy==1.2.17
-urllib3==1.24.1
-werkzeug==0.14.1
+soupsieve==1.9.1
+sqlalchemy==1.3.3
+starlette==0.11.1
+urllib3==1.24.2
+werkzeug==0.15.2
+whitenoise==4.1.2
