--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,23 @@
 -i https://pypi.org/simple
-aniso8601==6.0.0
+aiofiles==0.4.0
 beautifulsoup4==4.7.1
-certifi==2019.3.9
-chardet==3.0.4
-click==7.0
-fastapi==0.18.0
-flask-restful==0.3.7
-flask==1.0.2
+dnspython==1.16.0
+email-validator==1.0.4
+fastapi==0.27.0
 idna==2.8
 itsdangerous==1.1.0
-jinja2==2.10.1
-markupsafe==1.1.1
 marshmallow==2.19.2
 mysqlclient==1.4.2.post1
-numpy==1.16.3
+numpy==1.16.4
 pandas==0.24.2
 pillow==6.0.0
-pydantic==0.23
+pydantic==0.26
 python-dateutil==2.8.0
+python-memcached==1.59
 pytz==2019.1
-reportlab==3.5.19
-requests==2.21.0
+reportlab==3.5.23
 six==1.12.0
 soupsieve==1.9.1
-sqlalchemy==1.3.3
-starlette==0.11.1
-urllib3==1.24.2
-werkzeug==0.15.2
-whitenoise==4.1.2
+sqlalchemy==1.3.4
+starlette==0.12.0
+ujson==1.35
