--- a/classroom/package.json
+++ b/classroom/package.json
@@ -25,34 +25,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.14",
+    "@angular/animations": "^8.0.0",
     "@angular/cdk": "~7.3.7",
-    "@angular/common": "^7.2.14",
-    "@angular/compiler": "^7.2.14",
-    "@angular/core": "^7.2.14",
-    "@angular/forms": "^7.2.14",
-    "@angular/http": "^7.2.14",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.14",
-    "@angular/platform-browser-dynamic": "^7.2.14",
-    "@angular/router": "^7.2.14",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
     "core-js": "^3.0.1",
     "d3": "^5.9.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
     "ng-easyui": "^1.2.6",
     "ngx-spinner": "^7.1.4",
-    "rxjs": "^6.5.1",
+    "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.1",
     "rxjs-tslint": "^0.1.7",
     "tslib": "^1.9.0",
-    "zone.js": "^0.9.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.2.14",
-    "@angular/language-service": "^7.2.14",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "^8.0.1",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
@@ -70,6 +69,6 @@
     "protractor": "~5.4.2",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
-    "typescript": "3.2.4"
+    "typescript": "3.4.5"
   }
 }
