--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,15 @@ variables:
 before_script:
   - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
 
+pylint:
+  stage: test
+  image: python:latest
+  before_script:
+    - pip install pylint --quiet
+  script:
+    - pylint app
+  allow_failure: true
+
 classroom_lint:
   stage: test
   image: node:latest
@@ -30,6 +39,7 @@ classroom_lint:
   artifacts:
     reports:
       codequality: classroom/gl-codequality.json
+  allow_failure: true
 
 classroom_test:
   stage: test
