--- a/classroom/package.json
+++ b/classroom/package.json
@@ -25,17 +25,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/cdk": "~8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "core-js": "^3.1.3",
+    "@angular/animations": "^8.0.2",
+    "@angular/cdk": "~8.0.1",
+    "@angular/common": "^8.0.2",
+    "@angular/compiler": "^8.0.2",
+    "@angular/core": "^8.0.2",
+    "@angular/forms": "^8.0.2",
+    "@angular/material": "^8.0.1",
+    "@angular/platform-browser": "^8.0.2",
+    "@angular/platform-browser-dynamic": "^8.0.2",
+    "@angular/router": "^8.0.2",
+    "core-js": "^3.1.4",
     "d3": "^5.9.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
@@ -44,20 +44,20 @@
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
     "rxjs-tslint": "^0.1.7",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "^8.0.1",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/language-service": "^8.0.0",
+    "@angular-devkit/build-angular": "~0.800.3",
+    "@angular/cli": "^8.0.3",
+    "@angular/compiler-cli": "^8.0.2",
+    "@angular/language-service": "^8.0.2",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^12.0.4",
+    "@types/node": "^12.0.10",
     "ajv-keywords": "^3.4.0",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.0",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
@@ -67,8 +67,8 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "memoizee": "^0.4.14",
     "protractor": "~5.4.2",
-    "ts-node": "^8.2.0",
-    "tslint": "^5.17.0",
-    "typescript": "3.4.5"
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.4.5"
   }
 }
