Uses angular/material/dialog for about dialog. Using ngx-ui-loader for loading scrim.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ pylint:
   stage: test
   image: python:latest
   before_script:
-    - pip install --no-cache-dir --upgrade -r requirements.txt
+    - pip install --no-cache-dir --upgrade --quiet -r requirements.txt
     - pip install pylint --quiet
   script:
     - pylint app
