--- a/classroom/package.json
+++ b/classroom/package.json
@@ -19,23 +19,23 @@
     "build_dev": "ng build --aot --prod --base-href=/classroom/ --output-hashing none",
     "build_prod": "ng build --aot --prod --base-href=/docuscope/ --output-hashing none",
     "test": "ng test",
-    "test_headless": "ng test --progress=false --watch=false --browsers=ChromeHeadless --code-coverage=true",
+    "test_headless": "ng test --karmaConfig=src/karma.config.headless.js --progress=false --watch=false --browsers=ChromeHeadless --code-coverage=true",
     "lint": "ng lint",
     "codeclimate": "ng lint --format=json | node ./formatters/codeclimateFormatter.js > gl-codequality.json",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.2",
+    "@angular/animations": "^8.0.3",
     "@angular/cdk": "~8.0.1",
-    "@angular/common": "^8.0.2",
-    "@angular/compiler": "^8.0.2",
-    "@angular/core": "^8.0.2",
-    "@angular/forms": "^8.0.2",
+    "@angular/common": "^8.0.3",
+    "@angular/compiler": "^8.0.3",
+    "@angular/core": "^8.0.3",
+    "@angular/forms": "^8.0.3",
     "@angular/material": "^8.0.1",
-    "@angular/platform-browser": "^8.0.2",
-    "@angular/platform-browser-dynamic": "^8.0.2",
-    "@angular/router": "^8.0.2",
+    "@angular/platform-browser": "^8.0.3",
+    "@angular/platform-browser-dynamic": "^8.0.3",
+    "@angular/router": "^8.0.3",
     "core-js": "^3.1.4",
     "d3": "^5.9.2",
     "hammerjs": "^2.0.8",
@@ -51,8 +51,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.4",
     "@angular/cli": "^8.0.4",
-    "@angular/compiler-cli": "^8.0.2",
-    "@angular/language-service": "^8.0.2",
+    "@angular/compiler-cli": "^8.0.3",
+    "@angular/language-service": "^8.0.3",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "^2.0.6",
@@ -68,6 +68,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "memoizee": "^0.4.14",
     "protractor": "~5.4.2",
+    "puppeteer": "^1.18.1",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "typescript": "^3.4.5"
