--- a/classroom/package.json
+++ b/classroom/package.json
@@ -26,18 +26,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.1.0",
+    "@angular/animations": "^8.1.1",
     "@angular/cdk": "~8.0.2",
-    "@angular/common": "^8.1.0",
-    "@angular/compiler": "^8.1.0",
-    "@angular/core": "^8.1.0",
-    "@angular/forms": "^8.1.0",
+    "@angular/common": "^8.1.1",
+    "@angular/compiler": "^8.1.1",
+    "@angular/core": "^8.1.1",
+    "@angular/forms": "^8.1.1",
     "@angular/material": "^8.0.2",
-    "@angular/platform-browser": "^8.1.0",
-    "@angular/platform-browser-dynamic": "^8.1.0",
-    "@angular/router": "^8.1.0",
+    "@angular/platform-browser": "^8.1.1",
+    "@angular/platform-browser-dynamic": "^8.1.1",
+    "@angular/router": "^8.1.1",
     "core-js": "^3.1.4",
-    "d3": "^5.9.2",
+    "d3": "^5.9.7",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ng-easyui": "^1.2.6",
@@ -49,15 +49,16 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "^8.1.0",
-    "@angular/compiler-cli": "^8.1.0",
-    "@angular/language-service": "^8.1.0",
+    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular/cli": "^8.1.1",
+    "@angular/compiler-cli": "^8.1.1",
+    "@angular/language-service": "^8.1.1",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^12.0.10",
-    "ajv-keywords": "^3.4.0",
+    "@types/node": "^12.6.2",
+    "ajv": "^6.10.1",
+    "ajv-keywords": "^3.4.1",
     "codelyzer": "^5.1.0",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
