--- a/classroom/package.json
+++ b/classroom/package.json
@@ -59,6 +59,7 @@
     "@types/node": "^12.6.8",
     "ajv": "^6.10.2",
     "ajv-keywords": "^3.4.1",
+    "angular-google-charts": "^0.1.6",
     "codelyzer": "^5.1.0",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
