--- a/classroom/package.json
+++ b/classroom/package.json
@@ -36,6 +36,8 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
+    "angular-google-charts": "^0.1.6",
+    "angular-tag-cloud-module": "^3.8.1",
     "core-js": "^3.1.4",
     "d3": "^5.9.7",
     "hammerjs": "^2.0.8",
@@ -59,7 +61,6 @@
     "@types/node": "^12.7.0",
     "ajv": "^6.10.2",
     "ajv-keywords": "^3.4.1",
-    "angular-google-charts": "^0.1.6",
     "codelyzer": "^5.1.0",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
