Disables caching, updates to using better memcached client. Chenges to improve performancy by only hitting database once for corpus stats.

--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ itsdangerous = "*"
 aiofiles = "*"
 email-validator = "*"
 ujson = "*"
-python-memcached = "*"
+pymemcache = "*"
 
 [dev-packages]
 pylint = "*"
