--- a/requirements.txt
+++ b/requirements.txt
@@ -3,20 +3,20 @@ aiofiles==0.4.0
 beautifulsoup4==4.8.0
 dnspython==1.16.0
 email-validator==1.0.4
-fastapi==0.33.0
+fastapi==0.38.1
 idna==2.8
 itsdangerous==1.1.0
-mysqlclient==1.4.2.post1
-numpy==1.17.0
-pandas==0.25.0
+mysqlclient==1.4.4
+numpy==1.17.2
+pandas==0.25.1
 pillow==6.1.0
-pydantic==0.30
+pydantic==0.32.2
+pymemcache==2.2.2
 python-dateutil==2.8.0
-python-memcached==1.59
-pytz==2019.1
+pytz==2019.2
 reportlab==3.5.23
 six==1.12.0
-soupsieve==1.9.2
-sqlalchemy==1.3.6
-starlette==0.12.0
+soupsieve==1.9.3
+sqlalchemy==1.3.8
+starlette==0.12.8
 ujson==1.35
