Update .gitlab-ci.yml for docker:19.03.1 update

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ services:
   - docker:dind
 
 stages:
-  - build
   - test
+  - build
   - release
   - deploy
 
@@ -13,9 +13,11 @@ variables:
   DOCKER_DRIVER: overlay2
   REF_CONTAINER: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}
   RELEASE_CONTAINER:  ${CI_REGISTRY_IMAGE}:latest
+  DOCKER_TLS_CERTDIR: "/certs"
 
 before_script:
-  - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  - docker info
+  #- docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
 
 pylint:
   stage: test
