Attempt to fix classroom_test due to changes in chrome

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,9 @@ classroom_lint:
 
 classroom_test:
   stage: test
-  image: zenika/alpine-chrome:with-node
+  image:
+    name: zenika/alpine-chrome:with-node
+    entrypoint: chromium-browser --headless --disable-gpu --no-sandbox
   before_script:
     - npm --version
   script:
