--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ classroom_test:
   stage: test
   image: zenika/alpine-chrome:with-node
   before_script:
-    - apt add --no-cache freetype-dev@edge ca-certificates@edge
+    - apk add --no-cache freetype-dev@edge ca-certificates@edge
     - npm --version
     - node -v
   script:
