--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,9 +54,11 @@ classroom_test:
     - apt-get update
     - apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-freefont-ttf --no-install-recommends
     - rm -rf /var/lib/apt/lists/*
+    - addgroup -S luser && adduser -S -g luser luser && mkdir -p /home/luser/Downloads
   script:
     - cd classroom
     - npm ci
+    - su luser
     - npm run test_headless
     #- npm run e2e
   artifacts:
