--- a/classroom/package.json
+++ b/classroom/package.json
@@ -38,7 +38,7 @@
     "@angular/router": "^8.2.14",
     "angular-google-charts": "^0.1.6",
     "angular-tag-cloud-module": "^3.8.1",
-    "core-js": "^3.6.3",
+    "core-js": "^3.6.4",
     "d3": "^5.15.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
@@ -50,15 +50,15 @@
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.22",
-    "@angular/cli": "^8.3.22",
+    "@angular-devkit/build-angular": "~0.803.24",
+    "@angular/cli": "^8.3.24",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@types/d3": "^5.7.2",
-    "@types/jasmine": "^3.5.0",
+    "@types/jasmine": "^3.5.2",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.1.6",
-    "ajv": "^6.10.2",
+    "@types/node": "^13.5.3",
+    "ajv": "^6.11.0",
     "ajv-keywords": "^3.4.1",
     "codelyzer": "^5.2.1",
     "jasmine-core": "^3.5.0",
@@ -69,7 +69,7 @@
     "karma-jasmine": "^3.1.0",
     "karma-jasmine-html-reporter": "^1.5.1",
     "memoizee": "^0.4.14",
-    "protractor": "~5.4.2",
+    "protractor": "^5.4.3",
     "ts-node": "^8.6.2",
     "tslint": "^5.20.1",
     "typescript": "^3.5.3"
