--- a/classroom/package.json
+++ b/classroom/package.json
@@ -26,16 +26,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.3",
+    "@angular/animations": "^9.0.4",
     "@angular/cdk": "~9.1.0",
-    "@angular/common": "^9.0.3",
-    "@angular/compiler": "^9.0.3",
-    "@angular/core": "^9.0.3",
-    "@angular/forms": "^9.0.3",
+    "@angular/common": "^9.0.4",
+    "@angular/compiler": "^9.0.4",
+    "@angular/core": "^9.0.4",
+    "@angular/forms": "^9.0.4",
     "@angular/material": "^9.1.0",
-    "@angular/platform-browser": "^9.0.3",
-    "@angular/platform-browser-dynamic": "^9.0.3",
-    "@angular/router": "^9.0.3",
+    "@angular/platform-browser": "^9.0.4",
+    "@angular/platform-browser-dynamic": "^9.0.4",
+    "@angular/router": "^9.0.4",
     "angular-google-charts": "^0.1.6",
     "angular-tag-cloud-module": "^3.8.1",
     "core-js": "^3.6.4",
@@ -45,14 +45,14 @@
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "rxjs-tslint": "^0.1.7",
-    "tslib": "^1.11.0",
+    "tslib": "^1.11.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.3",
-    "@angular/cli": "^9.0.3",
-    "@angular/compiler-cli": "^9.0.3",
-    "@angular/language-service": "^9.0.3",
+    "@angular-devkit/build-angular": "~0.900.4",
+    "@angular/cli": "^9.0.4",
+    "@angular/compiler-cli": "^9.0.4",
+    "@angular/language-service": "^9.0.4",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "^3.5.7",
     "@types/jasminewd2": "^2.0.8",
@@ -71,6 +71,6 @@
     "protractor": "^5.4.3",
     "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
-    "typescript": "~3.7.5"
+    "typescript": "^3.7.5"
   }
 }
