--- a/classroom/package.json
+++ b/classroom/package.json
@@ -26,37 +26,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.5",
-    "@angular/cdk": "~9.1.1",
-    "@angular/common": "^9.0.5",
-    "@angular/compiler": "^9.0.5",
-    "@angular/core": "^9.0.5",
-    "@angular/forms": "^9.0.5",
-    "@angular/material": "^9.1.1",
-    "@angular/platform-browser": "^9.0.5",
-    "@angular/platform-browser-dynamic": "^9.0.5",
-    "@angular/router": "^9.0.5",
+    "@angular/animations": "^9.0.7",
+    "@angular/cdk": "~9.1.3",
+    "@angular/common": "^9.0.7",
+    "@angular/compiler": "^9.0.7",
+    "@angular/core": "^9.0.7",
+    "@angular/forms": "^9.0.7",
+    "@angular/material": "^9.1.3",
+    "@angular/platform-browser": "^9.0.7",
+    "@angular/platform-browser-dynamic": "^9.0.7",
+    "@angular/router": "^9.0.7",
     "angular-google-charts": "^0.1.6",
     "angular-tag-cloud-module": "^3.8.1",
     "core-js": "^3.6.4",
     "d3": "^5.15.0",
     "jquery": "^3.4.1",
-    "ngx-ui-loader": "^8.0.0",
+    "ngx-ui-loader": "^9.1.1",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "rxjs-tslint": "^0.1.7",
     "tslib": "^1.11.1",
-    "zone.js": "~0.10.2"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.5",
-    "@angular/cli": "^9.0.5",
-    "@angular/compiler-cli": "^9.0.5",
-    "@angular/language-service": "^9.0.5",
+    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular/cli": "^9.0.7",
+    "@angular/compiler-cli": "^9.0.7",
+    "@angular/language-service": "^9.0.7",
     "@types/d3": "^5.7.2",
-    "@types/jasmine": "^3.5.8",
+    "@types/jasmine": "^3.5.9",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.9.0",
+    "@types/node": "^13.9.2",
     "ajv": "^6.12.0",
     "ajv-keywords": "^3.4.1",
     "codelyzer": "^5.1.2",
@@ -69,8 +69,8 @@
     "karma-jasmine-html-reporter": "^1.5.2",
     "memoizee": "^0.4.14",
     "protractor": "^5.4.3",
-    "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
+    "ts-node": "^8.7.0",
+    "tslint": "^6.1.0",
     "typescript": "^3.7.5"
   }
 }
