--- a/classroom/package.json
+++ b/classroom/package.json
@@ -21,6 +21,7 @@
     "test": "ng test",
     "test_headless": "ng test --progress=false --watch=false --browsers=ChromeHeadlessNoSandbox --code-coverage=true",
     "lint": "ng lint",
+    "eslint": "eslint -c .eslintrc.js --ext .ts src",
     "codeclimate": "ng lint --format=json | node ./formatters/codeclimateFormatter.js > gl-codequality.json",
     "e2e": "ng e2e"
   },
@@ -57,9 +58,16 @@
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.13.4",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "ajv": "^6.12.2",
     "ajv-keywords": "^3.4.1",
     "codelyzer": "^5.2.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsdoc": "^24.0.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.2",
     "karma": "^5.0.2",
