--- a/classroom/package.json
+++ b/classroom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docuscope-classroom",
-  "version": "3.0.4",
+  "version": "4.0.0",
   "description": "Visualization of DocuScope analytics of a set of documents.",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --output-hashing none",
-    "build_dev": "ng build --prod --base-href=/classroom/ --output-hashing none",
+    "build_dev": "ng build --base-href=/classroom/ --output-hashing none",
     "build_prod": "ng build --base-href=/docuscope/classroom/ --output-hashing none --configuration=deploy",
     "test": "ng test",
     "test_headless": "ng test --progress=false --watch=false --browsers=ChromeHeadlessNoSandbox --code-coverage=true",
@@ -27,57 +27,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.4",
-    "@angular/cdk": "~9.2.2",
-    "@angular/common": "^9.1.4",
-    "@angular/compiler": "^9.1.4",
-    "@angular/core": "^9.1.4",
-    "@angular/forms": "^9.1.4",
-    "@angular/material": "^9.2.2",
-    "@angular/platform-browser": "^9.1.4",
-    "@angular/platform-browser-dynamic": "^9.1.4",
-    "@angular/router": "^9.1.4",
+    "@angular/animations": "^9.1.9",
+    "@angular/cdk": "~9.2.4",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/router": "^9.1.9",
     "angular-google-charts": "^1.1.4",
     "angular-tag-cloud-module": "^4.2.0",
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
     "ngx-ui-loader": "^9.1.1",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
     "rxjs-tslint": "^0.1.8",
-    "tslib": "^1.11.1",
+    "service": "^0.1.4",
+    "tslib": "^1.13.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.4",
-    "@angular/cli": "^9.1.4",
-    "@angular/compiler-cli": "^9.1.4",
-    "@angular/language-service": "^9.1.4",
+    "@angular-devkit/build-angular": "~0.901.7",
+    "@angular/cli": "^9.1.7",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/language-service": "^9.1.9",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.13.4",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
+    "@types/node": "^14.0.5",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/eslint-plugin-tslint": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "ajv": "^6.12.2",
     "ajv-keywords": "^3.4.1",
     "codelyzer": "^5.2.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsdoc": "^24.0.2",
+    "eslint-plugin-jsdoc": "^26.0.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.2",
-    "karma": "^5.0.4",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "memoizee": "^0.4.14",
-    "protractor": "^5.4.4",
-    "ts-node": "^8.10.1",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3"
   }
