Initial comparison view.
Backend seems to be working, but there should be some refactoring
to unify tagged-text and document.
First go at interface is working with errors.
Still needs multi-column counts for both categories and patterns.

--- a/classroom/src/assets/settings.json
+++ b/classroom/src/assets/settings.json
@@ -5,5 +5,6 @@
   "homepage": "https://www.cmu.edu/dietrich/english/research/docuscope.html",
   "scatter": {"width": 400, "height": 400},
   "boxplot": {"cloud": true},
-  "stv": {"max_clusters": 4}
+  "stv": {"max_clusters": 4},
+  "mtv": {"horizontal": true}
 }
