--- a/classroom/package.json
+++ b/classroom/package.json
@@ -27,17 +27,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.10",
+    "@angular/animations": "^9.1.11",
     "@angular/cdk": "~9.2.4",
-    "@angular/common": "^9.1.10",
-    "@angular/compiler": "^9.1.10",
-    "@angular/core": "^9.1.10",
-    "@angular/forms": "^9.1.10",
+    "@angular/common": "^9.1.11",
+    "@angular/compiler": "^9.1.11",
+    "@angular/core": "^9.1.11",
+    "@angular/forms": "^9.1.11",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.10",
-    "@angular/platform-browser-dynamic": "^9.1.10",
-    "@angular/router": "^9.1.10",
+    "@angular/platform-browser": "^9.1.11",
+    "@angular/platform-browser-dynamic": "^9.1.11",
+    "@angular/router": "^9.1.11",
     "angular-google-charts": "^1.1.4",
+    "angular-split": "^3.0.3",
     "angular-tag-cloud-module": "^4.2.0",
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
@@ -51,10 +52,10 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "^9.1.7",
-    "@angular/compiler-cli": "^9.1.10",
-    "@angular/language-service": "^9.1.10",
+    "@angular-devkit/build-angular": "~0.901.9",
+    "@angular/cli": "^9.1.9",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/language-service": "^9.1.11",
     "@types/d3": "^5.7.2",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
