Attempts to fix SAST

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,10 @@ include:
 
 variables:
   DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: "/certs"
   REF_CONTAINER: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_SLUG}
   RELEASE_CONTAINER:  ${CI_REGISTRY_IMAGE}:latest
-  DOCKER_TLS_CERTDIR: "/certs"
+  SAST_DISABLE_DIND: "false"
 
 before_script:
   - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
