Revert typescript to 4.1 (angular error with 4.2)
Fixes to use eslint

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,8 +40,9 @@ classroom_lint:
   script:
     - cd classroom
     - npm ci
-    - npm run codeclimate
-    - npm run lint
+    - npx eslint --format gitlab src
+    #- npm run codeclimate
+    #- npm run lint
   artifacts:
     reports:
       codequality: classroom/gl-codequality.json
