Better eslint/prettier integration and fixes

--- a/classroom/.prettierrc
+++ b/classroom/.prettierrc
@@ -1,1 +1,8 @@
 singleQuote: true
+overrides:
+  - files: '*.html'
+    options:
+      parser: 'html'
+  - files: '*.component.html'
+    options:
+      parser: 'angular'
