--- a/classroom/.eslintrc.json
+++ b/classroom/.eslintrc.json
@@ -16,32 +16,34 @@
         "createDefaultProgram": true
       },
       "extends": [
-        "prettier",
-        "plugin:@angular-eslint/ng-cli-compat",
-        "plugin:@angular-eslint/ng-cli-compat--formatting-add-on",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/recommended",
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-requiring-type-checking",
+        "plugin:prettier/recommended"
       ],
       "rules": {
-        "@angular-eslint/no-host-metadata-property": "off",
-        "@angular-eslint/no-inputs-metadata-property": "off",
-        "@angular-eslint/no-outputs-metadata-property": "off",
-        "@angular-eslint/use-lifecycle-interface": "off",
-        "@typescript-eslint/consistent-type-definitions": "error",
-        "@typescript-eslint/dot-notation": "off",
-        "@typescript-eslint/explicit-member-accessibility": [
-          "off",
+        "@angular-eslint/component-selector": [
+          "error",
           {
-            "accessibility": "explicit"
+            "type": "element",
+            "prefix": "app",
+            "style": "kebab-case"
           }
         ],
-        "@typescript-eslint/naming-convention": "off",
-        "brace-style": [
+        "@angular-eslint/directive-selector": [
           "error",
-          "1tbs"
+          {
+            "type": "attribute",
+            "prefix": "app",
+            "style": "camelCase"
+          }
         ],
-        "id-blacklist": "off",
-        "id-match": "off",
-        "no-underscore-dangle": "off"
+        "@typescript-eslint/no-unused-vars": [
+          "error",
+          { "argsIgnorePattern": "^_" }
+        ]
       }
     },
     {
@@ -49,7 +51,8 @@
         "*.html"
       ],
       "extends": [
-        "plugin:@angular-eslint/template/recommended"
+        "plugin:@angular-eslint/template/recommended",
+        "plugin:prettier/recommended"
       ],
       "rules": {}
     }
