--- a/classroom/package.json
+++ b/classroom/package.json
@@ -27,53 +27,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.9",
-    "@angular/cdk": "~11.2.8",
-    "@angular/common": "^11.2.9",
-    "@angular/compiler": "^11.2.9",
-    "@angular/core": "^11.2.9",
-    "@angular/forms": "^11.2.9",
-    "@angular/material": "^11.2.8",
-    "@angular/platform-browser": "^11.2.9",
-    "@angular/platform-browser-dynamic": "^11.2.9",
-    "@angular/router": "^11.2.9",
-    "angular-google-charts": "^2.0.1",
+    "@angular/animations": "^11.2.10",
+    "@angular/cdk": "~11.2.9",
+    "@angular/common": "^11.2.10",
+    "@angular/compiler": "^11.2.10",
+    "@angular/core": "^11.2.10",
+    "@angular/forms": "^11.2.10",
+    "@angular/material": "^11.2.9",
+    "@angular/platform-browser": "^11.2.10",
+    "@angular/platform-browser-dynamic": "^11.2.10",
+    "@angular/router": "^11.2.10",
+    "angular-google-charts": "^2.2.0",
     "angular-split": "^5.0.0",
     "angular-tag-cloud-module": "^5.3.0",
-    "core-js": "^3.9.1",
-    "d3": "^6.6.0",
+    "core-js": "^3.10.2",
+    "d3": "^6.7.0",
     "ngx-ui-loader": "^10.0.0",
     "rxjs": "^6.6.7",
-    "rxjs-compat": "^6.6.6",
+    "rxjs-compat": "^6.6.7",
     "service": "^0.1.4",
     "tslib": "^2.1.0",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.8",
-    "@angular-eslint/builder": "^2.0.2",
-    "@angular-eslint/eslint-plugin": "^2.0.2",
-    "@angular-eslint/eslint-plugin-template": "^2.0.2",
-    "@angular-eslint/schematics": "2.1.0",
-    "@angular-eslint/template-parser": "^2.0.2",
-    "@angular/cli": "^11.2.8",
-    "@angular/compiler-cli": "^11.2.9",
-    "@angular/language-service": "^11.2.9",
+    "@angular-devkit/build-angular": "^0.1102.9",
+    "@angular-eslint/builder": "^4.0.0",
+    "@angular-eslint/eslint-plugin": "^4.0.0",
+    "@angular-eslint/eslint-plugin-template": "^4.0.0",
+    "@angular-eslint/template-parser": "^4.0.0",
+    "@angular/cli": "^11.2.9",
+    "@angular/compiler-cli": "^11.2.10",
+    "@angular/language-service": "^11.2.10",
     "@types/d3": "^6.3.0",
-    "@types/jasmine": "^3.6.7",
+    "@types/google.visualization": "^0.0.66",
+    "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.14.35",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "ajv": "^8.0.5",
+    "@types/node": "^14.14.41",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "ajv": "^8.1.0",
     "ajv-keywords": "^5.0.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-formatter-gitlab": "^2.2.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "^32.3.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-prettier": "^3.4.0",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.2.0",
