Updates to Angular 12.
Tests working, coverage down a little.

--- a/classroom/package.json
+++ b/classroom/package.json
@@ -19,7 +19,7 @@
     "build:docuscope": "ng build --base-href=./ --output-hashing none",
     "build_dev": "ng build --base-href=/classroom/ --output-hashing none",
     "build_prod": "ng build --base-href=/docuscope/classroom/ --output-hashing none --configuration=deploy",
-    "test": "ng test",
+    "test": "ng test --code-coverage=true",
     "test_headless": "ng test --progress=false --watch=false --browsers=ChromeHeadlessNoSandbox --code-coverage=true",
     "lint": "eslint -c .eslintrc.json src",
     "prettier": "prettier -w src",
@@ -39,7 +39,6 @@
     "@angular/router": "^12.0.0",
     "angular-google-charts": "^2.2.1",
     "angular-split": "^5.0.0",
-    "angular-tag-cloud-module": "^5.3.0",
     "core-js": "^3.12.1",
     "d3": "^6.7.0",
     "ngx-ui-loader": "^11.0.0",
@@ -70,7 +69,7 @@
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-formatter-gitlab": "^2.2.0",
-    "eslint-plugin-import": "2.23.0",
+    "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsdoc": "^34.2.2",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "^3.4.0",
