Adds sticky table headers. Fixes #35.

--- a/classroom/src/assets/settings.json
+++ b/classroom/src/assets/settings.json
@@ -3,6 +3,7 @@
   "institution": "CMU",
   "unit": 100,
   "homepage": "https://www.cmu.edu/dietrich/english/research/docuscope.html",
+  "sticky_headers": true,
   "scatter": { "width": 400, "height": 400 },
   "mtv": { "horizontal": false, "documentColors": ["#247", "#085"] }
 }
