--- a/classroom/package.json
+++ b/classroom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docuscope-classroom",
-  "version": "5.1.1",
+  "version": "5.1.2",
   "description": "Visualization of DocuScope analytics of a set of documents.",
   "repository": {
     "type": "git",
@@ -28,16 +28,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.8",
-    "@angular/cdk": "~12.2.8",
-    "@angular/common": "^12.2.8",
-    "@angular/compiler": "^12.2.8",
-    "@angular/core": "^12.2.8",
-    "@angular/forms": "^12.2.8",
-    "@angular/material": "^12.2.8",
-    "@angular/platform-browser": "^12.2.8",
-    "@angular/platform-browser-dynamic": "^12.2.8",
-    "@angular/router": "^12.2.8",
+    "@angular/animations": "^12.2.12",
+    "@angular/cdk": "~12.2.12",
+    "@angular/common": "^12.2.12",
+    "@angular/compiler": "^12.2.12",
+    "@angular/core": "^12.2.12",
+    "@angular/forms": "^12.2.12",
+    "@angular/material": "^12.2.12",
+    "@angular/platform-browser": "^12.2.12",
+    "@angular/platform-browser-dynamic": "^12.2.12",
+    "@angular/router": "^12.2.12",
     "angular-google-charts": "^2.2.2",
     "angular-split": "^5.0.0",
     "core-js": "^3.18.0",
@@ -50,29 +50,29 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.8",
-    "@angular-eslint/builder": "12.5.0",
-    "@angular-eslint/eslint-plugin": "12.5.0",
-    "@angular-eslint/eslint-plugin-template": "12.5.0",
-    "@angular-eslint/schematics": "12.5.0",
-    "@angular-eslint/template-parser": "12.5.0",
-    "@angular/cli": "^12.2.8",
-    "@angular/compiler-cli": "^12.2.8",
-    "@angular/language-service": "^12.2.8",
+    "@angular-devkit/build-angular": "^12.2.12",
+    "@angular-eslint/builder": "^12.6.1",
+    "@angular-eslint/eslint-plugin": "^12.6.1",
+    "@angular-eslint/eslint-plugin-template": "^12.6.1",
+    "@angular-eslint/schematics": "12.6.1",
+    "@angular-eslint/template-parser": "^12.6.1",
+    "@angular/cli": "^12.2.12",
+    "@angular/compiler-cli": "^12.2.12",
+    "@angular/language-service": "^12.2.12",
     "@types/d3": "^7.0.0",
     "@types/google.visualization": "^0.0.68",
     "@types/jasmine": "^3.9.1",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^16.9.6",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "ajv": "^8.6.3",
     "ajv-keywords": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-formatter-gitlab": "^2.2.0",
+    "eslint-formatter-gitlab": "^3.0.0",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^36.1.0",
+    "eslint-plugin-jsdoc": "^37.0.3",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
     "jasmine-core": "^3.9.0",
