--- a/requirements.txt
+++ b/requirements.txt
@@ -7,30 +7,32 @@
 
 -i https://pypi.org/simple
 aiofiles==0.7.0
+anyio==3.3.4; python_full_version >= '3.6.2'
 beautifulsoup4==4.10.0
 deprecation==2.1.0
 dnspython==2.1.0; python_version >= '3.6'
 email-validator==1.1.3
 fastapi-profiler==1.0.0
-fastapi==0.68.1
+fastapi==0.70.0
 greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
-idna==3.2; python_version >= '3.5'
+idna==3.3; python_version >= '3.5'
 itsdangerous==2.0.1
 lxml==4.6.3
 mysqlclient==2.0.3
-numpy==1.21.2; python_version < '3.11' and python_version >= '3.7'
-packaging==21.0; python_version >= '3.6'
-pandas==1.3.3
-pillow==8.3.2; python_version >= '3.6'
+numpy==1.21.3; python_version < '3.10' and platform_machine != 'aarch64' and platform_machine != 'arm64'
+packaging==21.2; python_version >= '3.6'
+pandas==1.3.4
+pillow==8.4.0; python_version >= '3.6'
 pydantic==1.8.2; python_full_version >= '3.6.1'
 pyinstrument==4.0.4; python_version >= '3.7'
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2021.3
-reportlab==3.6.1
+reportlab==3.6.2
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sniffio==1.2.0; python_version >= '3.5'
 soupsieve==2.2.1; python_version >= '3.6'
-sqlalchemy==1.4.25
-starlette==0.14.2; python_version >= '3.6'
+sqlalchemy==1.4.26
+starlette==0.16.0; python_version >= '3.6'
 typing-extensions==3.10.0.2
 ujson==4.2.0
