Refactors default_settings to use pydantic's BaseSettings.
This simplifies managing environment variables, secrets, and dotenv files.

--- a/Pipfile
+++ b/Pipfile
@@ -17,10 +17,12 @@ ujson = "*"
 lxml = "*"
 fastapi-profiler = "*"
 deprecation = "*"
+uvicorn = "*"
+pydantic = {extras = ["dotenv"], version = "*"}
 
 [dev-packages]
 pylint = "*"
 bandit = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
