--- a/classroom/package.json
+++ b/classroom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docuscope-classroom",
-  "version": "5.2.1",
+  "version": "5.2.2",
   "description": "Visualization of DocuScope analytics of a set of documents.",
   "repository": {
     "type": "git",
@@ -16,9 +16,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --output-hashing none",
-    "build:docuscope": "ng build --base-href=./ --output-hashing none --configuration=prod",
-    "build_dev": "ng build --base-href=/classroom/ --output-hashing none",
-    "build:deploy": "ng build --base-href=/docuscope/classroom/ --output-hashing none --configuration=deploy",
+    "build:docuscope": "ng build --base-href=./ --configuration=production",
+    "build:dev": "ng build --base-href=/classroom/ --output-hashing none --configuration=development",
+    "build:deploy": "ng build --base-href=/docuscope/classroom/ --configuration=deploy",
     "test": "ng test --code-coverage=true",
     "test_headless": "ng test --progress=false --watch=false --browsers=ChromeHeadlessNoSandbox --code-coverage=true",
     "lint": "eslint -c .eslintrc.json src",
@@ -28,18 +28,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.9",
-    "@angular/cdk": "~13.3.7",
-    "@angular/common": "^13.3.9",
-    "@angular/compiler": "^13.3.9",
-    "@angular/core": "^13.3.9",
-    "@angular/forms": "^13.3.9",
-    "@angular/material": "^13.3.7",
-    "@angular/platform-browser": "^13.3.9",
-    "@angular/platform-browser-dynamic": "^13.3.9",
-    "@angular/router": "^13.3.9",
+    "@angular/animations": "^13.3.10",
+    "@angular/cdk": "~13.3.8",
+    "@angular/common": "^13.3.10",
+    "@angular/compiler": "^13.3.10",
+    "@angular/core": "^13.3.10",
+    "@angular/forms": "^13.3.10",
+    "@angular/material": "^13.3.8",
+    "@angular/platform-browser": "^13.3.10",
+    "@angular/platform-browser-dynamic": "^13.3.10",
+    "@angular/router": "^13.3.10",
     "angular-split": "^13.2.0",
-    "core-js": "^3.22.6",
+    "core-js": "^3.22.7",
     "d3": "^7.4.4",
     "rxjs": "^7.5.5",
     "rxjs-compat": "^6.6.7",
@@ -48,15 +48,15 @@
     "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.6",
+    "@angular-devkit/build-angular": "^13.3.7",
     "@angular-eslint/builder": "^13.2.1",
     "@angular-eslint/eslint-plugin": "^13.2.1",
     "@angular-eslint/eslint-plugin-template": "^13.2.1",
     "@angular-eslint/schematics": "13.2.1",
     "@angular-eslint/template-parser": "^13.2.1",
-    "@angular/cli": "^13.3.6",
-    "@angular/compiler-cli": "^13.3.9",
-    "@angular/language-service": "^13.3.9",
+    "@angular/cli": "^13.3.7",
+    "@angular/compiler-cli": "^13.3.10",
+    "@angular/language-service": "^13.3.10",
     "@types/d3": "^7.4.0",
     "@types/google.visualization": "^0.0.68",
     "@types/jasmine": "^4.0.3",
@@ -79,7 +79,7 @@
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "prettier": "^2.6.2",
     "protractor": "~7.0.0",
     "ts-node": "^10.8.0",
