--- a/classroom/angular.json
+++ b/classroom/angular.json
@@ -140,9 +140,10 @@
       }
     }
   },
-  "defaultProject": "classroom",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics",
-    "analytics": false
+    "analytics": false,
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
