--- a/classroom/angular.json
+++ b/classroom/angular.json
@@ -96,10 +96,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "classroom:build:production"
+              "buildTarget": "classroom:build:production"
             },
             "development": {
-              "browserTarget": "classroom:build:development"
+              "buildTarget": "classroom:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -107,7 +107,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "classroom:build"
+            "buildTarget": "classroom:build"
           }
         },
         "test": {
